--- a/index.html
+++ b/index.html
@@ -157,7 +157,11 @@
                 <label for="slaLink">SLA:</label>
                 <input type="text" id="slaLink" placeholder="Ex: 4hrs">
             </div>
-        </div>
+            <div class="form-group">
+                <label for="atualizacaoLink">Atualização (em ordem cronológica):</label>
+                <textarea id="atualizacaoLink" rows="5" placeholder="Ex:&#10;11h30 - Operadora informou...&#10;12h00 - Link restabelecido..."></textarea>
+            </div>
+            </div>
 
         <button id="gerarMensagem">Gerar Mensagem</button>
         <button id="copiarMensagem">Copiar Mensagem</button>
