Atualização de titulo

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gerador de Notificações NOC</title>
+    <title>Gerador de Notificações GCO</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
-        <h1>Gerador de Notificações NOC</h1>
+        <h1>Gerador de Notificações GCO</h1>
 
         <div id="customAlertPopup" class="custom-alert-popup" style="display: none;">
             <div class="custom-alert-content">
@@ -50,7 +50,7 @@
 
         <div class="campos-crise">
             <div class="form-group">
-                <label for="tituloCrise">Título da Crise (Ex: LENTIDÃO SAP - Enel):</label>
+                <label for="tituloCrise">Título da Crise:</label>
                 <input type="text" id="tituloCrise" placeholder="Ex: LENTIDÃO SAP - Enel - Lojas Enel">
             </div>
             <div class="form-group">
