--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div id="customAlertPopup" class="custom-alert-popup" style="display: none;">
             <div class="custom-alert-content">
                 <span class="close-button" id="closeAlertPopup">&times;</span>
-                <h2>🔔 ALERTA NOC! 🔔</h2>
+                <h2>🔔 ALERTA GCO! 🔔</h2>
                 <p id="customAlertMessage">Hora de Postar a Atualização no Grupo!</p>
                 <button id="okAlertButton">OK, ENTENDIDO</button>
             </div>
@@ -22,7 +22,7 @@
             <h2>Timer de Alerta para Atualização</h2>
             <div class="form-group">
                 <label for="timerDuracao">Duração do Timer (minutos):</label>
-                <input type="number" id="timerDuracao" value="30" min="1">
+                <input type="number" id="timerDuracao" value="15" min="1">
             </div>
             <div class="timer-controls">
                 <button id="iniciarTimer">Iniciar Timer</button>
